// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TestLayout > HeaderBar > hide menu button based on the theme 1`] = `
<div
  class="headerbar"
>
  <header>
     
    <div
      class="logo"
    >
      <img
        alt="TAO Logo"
        src="logo.svg"
      />
    </div>
     
    <div
      class="content"
    >
      <div
        class="header-bar-content"
      />
    </div>
  </header>
   
  <aside>
    <ol
      class="end"
    >
       
    </ol>
     
    <div
      slot="aside-after"
    />
  </aside>
</div>
`;

exports[`TestLayout > HeaderBar > update the logo based on the theme 1`] = `
<body>
  <div>
    <div
      class="test-runner use-a11y-text-styles initial"
      style="--window-height: 767px; --floating-tools-height: 0px;"
    >
      <div />
       
      <div
        class="top-bar not-printable"
        id="test-top-bar"
      >
        <div>
          <div
            class="headerbar"
          >
            <header>
              <ol
                class="start"
              >
                <li>
                  <button
                    aria-controls="tao-panel-123"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Main menu"
                    class="icon-bar-btn actionable base-24 default"
                    data-test-id="mainmenu"
                    title="Main menu"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon large"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Menu icon
                      </title>
                      <path
                        d="M0 2h24v3H0zm0 8h24v3H0zm0 8h24v3H0z"
                      />
                    </svg>
                     
                     
                  </button>
                   
                </li>
              </ol>
               
              <div
                class="logo"
              >
                <img
                  alt="custom logo"
                  src="bar.png"
                />
              </div>
               
              <div
                class="content"
              >
                <div
                  class="header-bar-content"
                />
              </div>
            </header>
             
            <aside>
              <ol
                class="end"
              >
                 
              </ol>
               
              <div
                slot="aside-after"
              />
            </aside>
          </div>
        </div>
         
        <div
          class="floating-toolbars-wrapper"
        >
          <div
            class="floating-toolbars"
          >
            
             
            <div
              class="flex-break"
            />
            
            
             
            <div
              class="flex-break"
            />
            
            
             
            
          </div>
        </div>
      </div>
       
      <div
        class="notification-container-wrapper not-printable"
      >
        <div
          aria-label="Notifications"
          class="notification-container"
          role="log"
        />
      </div>
       
      <main
        aria-labelledby="a11y-main"
        id="test-main"
        role="main"
        tabindex="0"
      >
        <div
          class="scroll-first-child"
        />
         
        <h2
          class="visually-hidden"
          id="a11y-main"
          tabindex="-1"
        />
         
        <div
          class="test-content-columns"
        >
          <aside
            class="not-displayed"
            id="test-content-aside-start"
            role="aside"
          />
           
          <div
            class="qti-item-container"
          />
           
          <aside
            class="not-displayed"
            id="test-content-aside-end"
            role="aside"
          />
        </div>
         
        <div
          class="scroll-last-child"
        />
      </main>
       
      <div
        class="transition-wrapper"
      />
       
      <nav
        aria-hidden="true"
        class="bottom-bar do-not-read not-printable"
        id="test-navigation"
      >
        <h2
          class="visually-hidden"
        >
          Test Navigation
        </h2>
      </nav>
       
      <nav
        class="item-modalfeedback-nav hidden"
        style="--nav-height: var(--testrunner-footer-height);"
      />
       
      <div
        class="item-hanger-wrapper not-printable"
      />
       
      <div
        aria-hidden="true"
        class="overlay"
      >
        <header
          role="none"
        >
          <div
            slot="header"
          />
        </header>
         
        <div
          aria-labelledby="a11y-overlay"
          class="overlay-content"
          role="main"
        >
          <div
            class="scroll-first-child"
          />
           
          <div
            slot="content"
          />
           
          <div
            class="scroll-last-child"
          />
        </div>
         
        <footer>
          <div
            slot="footer"
          />
        </footer>
      </div>
    </div>
     
    <div
      class="panel close-initial inverted-color"
      id="tao-panel-123"
    >
      <div
        class="drawer start inverted"
      >
        <div
          class="header"
        >
          <div
            class="icon-wrapper"
          >
            <button
              aria-label="Close Panel"
              class="icon-bar-btn actionable base-16 inverted"
              title="Close Panel"
            >
              <svg
                aria-hidden="false"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Remove icon
                </title>
                <path
                  d="M1 0l7 7 7-7 1 1-7 7 7 7-1 1-7-7-7 7-1-1 7-7-7-7 1-1z"
                />
              </svg>
               
               
            </button>
          </div>
           
        </div>
         
        <div
          class="drawer-content"
        >
          <div
            class="panel-content use-a11y-text-styles"
          />
        </div>
      </div>
    </div>
     
    <div
      class="panel-wrapper use-a11y-text-styles"
      id="tao-panel-123"
    />
     
    <div
      class="feedback-dialogs-wrapper use-a11y-text-styles"
    >
      
    </div>
  </div>
</body>
`;

exports[`TestLayout > NotificationContainer > can render and remove notifications 1`] = `
<div
  class="notification-container-wrapper not-printable"
>
  <div
    aria-label="Notifications"
    class="notification-container"
    role="log"
  >
    
    <div
      class="notification-wrapper button-fill success"
    >
      <svg
        aria-hidden="true"
        class="icon medium"
        viewBox="0 0 16 16"
      >
        <title>
          Check mark icon
        </title>
        <path
          d="M14.73 1.91L16 3.18 5.09 14.09 0 9l1.27-1.27 3.82 3.82z"
        />
      </svg>
       
      <div
        aria-live="assertive"
        class="notification-content"
      >
        <div
          class="notification-text"
        >
           
          <span
            class="notification-body"
          >
            hello world
          </span>
          
        </div>
         
      </div>
       
      <div
        class="notification-close"
      >
        <button
          aria-label="close"
          class="icon-bar-btn actionable base-12 default"
          title="close"
        >
          <svg
            aria-hidden="true"
            class="icon small"
            viewBox="0 0 12 12"
          >
            <title>
              Remove icon
            </title>
            <path
              d="M1 0l5 5 5-5 1 1-5 5 5 5-1 1-5-5-5 5-1-1 5-5-5-5 1-1z"
            />
          </svg>
           
           
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TestLayout > mounts with the main areas 1`] = `
{
  "a11yMenuPanel": <div
    class="panel-wrapper use-a11y-text-styles"
    id="tao-panel-123"
  />,
  "asideEnd": <aside
    class="not-displayed"
    id="test-content-aside-end"
    role="aside"
  />,
  "asideStart": <aside
    class="not-displayed"
    id="test-content-aside-start"
    role="aside"
  />,
  "content": <div
    class="qti-item-container"
  />,
  "feedbackDialogs": <div
    class="feedback-dialogs-wrapper use-a11y-text-styles"
  >
    
  </div>,
  "header": <div
    class="header-bar-content"
  />,
  "itemModalFeedbackNavigator": <nav
    class="item-modalfeedback-nav hidden"
    style="--nav-height: var(--testrunner-footer-height);"
  />,
  "jumpMenu": <div />,
  "main": <main
    aria-labelledby="a11y-main"
    id="test-main"
    role="main"
    tabindex="0"
  >
    <div
      class="scroll-first-child"
    />
     
    <h2
      class="visually-hidden"
      id="a11y-main"
      tabindex="-1"
    />
     
    <div
      class="test-content-columns"
    >
      <aside
        class="not-displayed"
        id="test-content-aside-start"
        role="aside"
      />
       
      <div
        class="qti-item-container"
      />
       
      <aside
        class="not-displayed"
        id="test-content-aside-end"
        role="aside"
      />
    </div>
     
    <div
      class="scroll-last-child"
    />
  </main>,
  "navigation": <nav
    aria-hidden="true"
    class="bottom-bar do-not-read not-printable"
    id="test-navigation"
  >
    <h2
      class="visually-hidden"
    >
      Test Navigation
    </h2>
  </nav>,
  "overlayContent": <div
    slot="content"
  />,
  "overlayFooter": <div
    slot="footer"
  />,
  "overlayHeader": <div
    slot="header"
  />,
  "panel": <div
    class="panel-content use-a11y-text-styles"
  />,
  "testRunner": <div
    class="test-runner use-a11y-text-styles initial"
    style="--window-height: 767px; --floating-tools-height: 0px;"
  >
    <div />
     
    <div
      class="top-bar not-printable"
      id="test-top-bar"
    >
      <div>
        <div
          class="headerbar"
        >
          <header>
            <ol
              class="start"
            >
              <li>
                <button
                  aria-controls="tao-panel-123"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Main menu"
                  class="icon-bar-btn actionable base-24 default"
                  data-test-id="mainmenu"
                  title="Main menu"
                >
                  <svg
                    aria-hidden="true"
                    class="icon large"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      Menu icon
                    </title>
                    <path
                      d="M0 2h24v3H0zm0 8h24v3H0zm0 8h24v3H0z"
                    />
                  </svg>
                   
                   
                </button>
                 
              </li>
            </ol>
             
            <div
              class="logo"
            >
              <img
                alt="TAO Logo"
                src="logo.svg"
              />
            </div>
             
            <div
              class="content"
            >
              <div
                class="header-bar-content"
              />
            </div>
          </header>
           
          <aside>
            <ol
              class="end"
            >
               
            </ol>
             
            <div
              slot="aside-after"
            />
          </aside>
        </div>
      </div>
       
      <div
        class="floating-toolbars-wrapper"
      >
        <div
          class="floating-toolbars"
        >
          
           
          <div
            class="flex-break"
          />
          
          
           
          <div
            class="flex-break"
          />
          
          
           
          
        </div>
      </div>
    </div>
     
    <div
      class="notification-container-wrapper not-printable"
    >
      <div
        aria-label="Notifications"
        class="notification-container"
        role="log"
      />
    </div>
     
    <main
      aria-labelledby="a11y-main"
      id="test-main"
      role="main"
      tabindex="0"
    >
      <div
        class="scroll-first-child"
      />
       
      <h2
        class="visually-hidden"
        id="a11y-main"
        tabindex="-1"
      />
       
      <div
        class="test-content-columns"
      >
        <aside
          class="not-displayed"
          id="test-content-aside-start"
          role="aside"
        />
         
        <div
          class="qti-item-container"
        />
         
        <aside
          class="not-displayed"
          id="test-content-aside-end"
          role="aside"
        />
      </div>
       
      <div
        class="scroll-last-child"
      />
    </main>
     
    <div
      class="transition-wrapper"
    />
     
    <nav
      aria-hidden="true"
      class="bottom-bar do-not-read not-printable"
      id="test-navigation"
    >
      <h2
        class="visually-hidden"
      >
        Test Navigation
      </h2>
    </nav>
     
    <nav
      class="item-modalfeedback-nav hidden"
      style="--nav-height: var(--testrunner-footer-height);"
    />
     
    <div
      class="item-hanger-wrapper not-printable"
    />
     
    <div
      aria-hidden="true"
      class="overlay"
    >
      <header
        role="none"
      >
        <div
          slot="header"
        />
      </header>
       
      <div
        aria-labelledby="a11y-overlay"
        class="overlay-content"
        role="main"
      >
        <div
          class="scroll-first-child"
        />
         
        <div
          slot="content"
        />
         
        <div
          class="scroll-last-child"
        />
      </div>
       
      <footer>
        <div
          slot="footer"
        />
      </footer>
    </div>
  </div>,
  "tools": <div
    class="floating-toolbars-wrapper"
  >
    <div
      class="floating-toolbars"
    >
      
       
      <div
        class="flex-break"
      />
      
      
       
      <div
        class="flex-break"
      />
      
      
       
      
    </div>
  </div>,
  "topBar": <div
    class="top-bar not-printable"
    id="test-top-bar"
  >
    <div>
      <div
        class="headerbar"
      >
        <header>
          <ol
            class="start"
          >
            <li>
              <button
                aria-controls="tao-panel-123"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Main menu"
                class="icon-bar-btn actionable base-24 default"
                data-test-id="mainmenu"
                title="Main menu"
              >
                <svg
                  aria-hidden="true"
                  class="icon large"
                  viewBox="0 0 24 24"
                >
                  <title>
                    Menu icon
                  </title>
                  <path
                    d="M0 2h24v3H0zm0 8h24v3H0zm0 8h24v3H0z"
                  />
                </svg>
                 
                 
              </button>
               
            </li>
          </ol>
           
          <div
            class="logo"
          >
            <img
              alt="TAO Logo"
              src="logo.svg"
            />
          </div>
           
          <div
            class="content"
          >
            <div
              class="header-bar-content"
            />
          </div>
        </header>
         
        <aside>
          <ol
            class="end"
          >
             
          </ol>
           
          <div
            slot="aside-after"
          />
        </aside>
      </div>
    </div>
     
    <div
      class="floating-toolbars-wrapper"
    >
      <div
        class="floating-toolbars"
      >
        
         
        <div
          class="flex-break"
        />
        
        
         
        <div
          class="flex-break"
        />
        
        
         
        
      </div>
    </div>
  </div>,
}
`;

exports[`TestLayout > notification (itemHanger) > displays and clear messages 1`] = `
<body>
  <div>
    <div
      class="test-runner use-a11y-text-styles initial with-item-hanger"
      style="--window-height: 767px; --floating-tools-height: 0px;"
    >
      <div />
       
      <div
        class="top-bar not-printable"
        id="test-top-bar"
      >
        <div>
          <div
            class="headerbar"
          >
            <header>
              <ol
                class="start"
              >
                <li>
                  <button
                    aria-controls="tao-panel-123"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Main menu"
                    class="icon-bar-btn actionable base-24 default"
                    data-test-id="mainmenu"
                    title="Main menu"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon large"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Menu icon
                      </title>
                      <path
                        d="M0 2h24v3H0zm0 8h24v3H0zm0 8h24v3H0z"
                      />
                    </svg>
                     
                     
                  </button>
                   
                </li>
              </ol>
               
              <div
                class="logo"
              >
                <img
                  alt="TAO Logo"
                  src="logo.svg"
                />
              </div>
               
              <div
                class="content"
              >
                <div
                  class="header-bar-content"
                />
              </div>
            </header>
             
            <aside>
              <ol
                class="end"
              >
                 
              </ol>
               
              <div
                slot="aside-after"
              />
            </aside>
          </div>
        </div>
         
        <div
          class="floating-toolbars-wrapper"
        >
          <div
            class="floating-toolbars"
          >
            
             
            <div
              class="flex-break"
            />
            
            
             
            <div
              class="flex-break"
            />
            
            
             
            
          </div>
        </div>
      </div>
       
      <div
        class="notification-container-wrapper not-printable"
      >
        <div
          aria-label="Notifications"
          class="notification-container"
          role="log"
        />
      </div>
       
      <main
        aria-labelledby="a11y-main"
        id="test-main"
        role="main"
        tabindex="0"
      >
        <div
          class="scroll-first-child"
        />
         
        <h2
          class="visually-hidden"
          id="a11y-main"
          tabindex="-1"
        />
         
        <div
          class="test-content-columns"
        >
          <aside
            class="not-displayed"
            id="test-content-aside-start"
            role="aside"
          />
           
          <div
            class="qti-item-container"
          />
           
          <aside
            class="not-displayed"
            id="test-content-aside-end"
            role="aside"
          />
        </div>
         
        <div
          class="scroll-last-child"
        />
      </main>
       
      <div
        class="transition-wrapper"
      />
       
      <nav
        aria-hidden="true"
        class="bottom-bar do-not-read not-printable"
        id="test-navigation"
      >
        <h2
          class="visually-hidden"
        >
          Test Navigation
        </h2>
      </nav>
       
      <nav
        class="item-modalfeedback-nav hidden"
        style="--nav-height: var(--testrunner-footer-height);"
      />
       
      <div
        class="item-hanger-wrapper not-printable"
      >
        <div
          class="item-hanger"
        >
          <p
            class="inverted"
          >
            <span
              role="alert"
            >
              Hello world
            </span>
             
             
          </p>
        </div>
      </div>
       
      <div
        aria-hidden="true"
        class="overlay"
      >
        <header
          role="none"
        >
          <div
            slot="header"
          />
        </header>
         
        <div
          aria-labelledby="a11y-overlay"
          class="overlay-content"
          role="main"
        >
          <div
            class="scroll-first-child"
          />
           
          <div
            slot="content"
          />
           
          <div
            class="scroll-last-child"
          />
        </div>
         
        <footer>
          <div
            slot="footer"
          />
        </footer>
      </div>
    </div>
     
    <div
      class="panel close-initial inverted-color"
      id="tao-panel-123"
    >
      <div
        class="drawer start inverted"
      >
        <div
          class="header"
        >
          <div
            class="icon-wrapper"
          >
            <button
              aria-label="Close Panel"
              class="icon-bar-btn actionable base-16 inverted"
              title="Close Panel"
            >
              <svg
                aria-hidden="false"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Remove icon
                </title>
                <path
                  d="M1 0l7 7 7-7 1 1-7 7 7 7-1 1-7-7-7 7-1-1 7-7-7-7 1-1z"
                />
              </svg>
               
               
            </button>
          </div>
           
        </div>
         
        <div
          class="drawer-content"
        >
          <div
            class="panel-content use-a11y-text-styles"
          />
        </div>
      </div>
    </div>
     
    <div
      class="panel-wrapper use-a11y-text-styles"
      id="tao-panel-123"
    />
     
    <div
      class="feedback-dialogs-wrapper use-a11y-text-styles"
    >
      
    </div>
  </div>
</body>
`;

exports[`TestLayout > notification (itemHanger) > displays and clear messages 2`] = `
<body>
  <div>
    <div
      class="test-runner use-a11y-text-styles initial"
      style="--window-height: 767px; --floating-tools-height: 0px;"
    >
      <div />
       
      <div
        class="top-bar not-printable"
        id="test-top-bar"
      >
        <div>
          <div
            class="headerbar"
          >
            <header>
              <ol
                class="start"
              >
                <li>
                  <button
                    aria-controls="tao-panel-123"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Main menu"
                    class="icon-bar-btn actionable base-24 default"
                    data-test-id="mainmenu"
                    title="Main menu"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon large"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Menu icon
                      </title>
                      <path
                        d="M0 2h24v3H0zm0 8h24v3H0zm0 8h24v3H0z"
                      />
                    </svg>
                     
                     
                  </button>
                   
                </li>
              </ol>
               
              <div
                class="logo"
              >
                <img
                  alt="TAO Logo"
                  src="logo.svg"
                />
              </div>
               
              <div
                class="content"
              >
                <div
                  class="header-bar-content"
                />
              </div>
            </header>
             
            <aside>
              <ol
                class="end"
              >
                 
              </ol>
               
              <div
                slot="aside-after"
              />
            </aside>
          </div>
        </div>
         
        <div
          class="floating-toolbars-wrapper"
        >
          <div
            class="floating-toolbars"
          >
            
             
            <div
              class="flex-break"
            />
            
            
             
            <div
              class="flex-break"
            />
            
            
             
            
          </div>
        </div>
      </div>
       
      <div
        class="notification-container-wrapper not-printable"
      >
        <div
          aria-label="Notifications"
          class="notification-container"
          role="log"
        />
      </div>
       
      <main
        aria-labelledby="a11y-main"
        id="test-main"
        role="main"
        tabindex="0"
      >
        <div
          class="scroll-first-child"
        />
         
        <h2
          class="visually-hidden"
          id="a11y-main"
          tabindex="-1"
        />
         
        <div
          class="test-content-columns"
        >
          <aside
            class="not-displayed"
            id="test-content-aside-start"
            role="aside"
          />
           
          <div
            class="qti-item-container"
          />
           
          <aside
            class="not-displayed"
            id="test-content-aside-end"
            role="aside"
          />
        </div>
         
        <div
          class="scroll-last-child"
        />
      </main>
       
      <div
        class="transition-wrapper"
      />
       
      <nav
        aria-hidden="true"
        class="bottom-bar do-not-read not-printable"
        id="test-navigation"
      >
        <h2
          class="visually-hidden"
        >
          Test Navigation
        </h2>
      </nav>
       
      <nav
        class="item-modalfeedback-nav hidden"
        style="--nav-height: var(--testrunner-footer-height);"
      />
       
      <div
        class="item-hanger-wrapper not-printable"
      />
       
      <div
        aria-hidden="true"
        class="overlay"
      >
        <header
          role="none"
        >
          <div
            slot="header"
          />
        </header>
         
        <div
          aria-labelledby="a11y-overlay"
          class="overlay-content"
          role="main"
        >
          <div
            class="scroll-first-child"
          />
           
          <div
            slot="content"
          />
           
          <div
            class="scroll-last-child"
          />
        </div>
         
        <footer>
          <div
            slot="footer"
          />
        </footer>
      </div>
    </div>
     
    <div
      class="panel close-initial inverted-color"
      id="tao-panel-123"
    >
      <div
        class="drawer start inverted"
      >
        <div
          class="header"
        >
          <div
            class="icon-wrapper"
          >
            <button
              aria-label="Close Panel"
              class="icon-bar-btn actionable base-16 inverted"
              title="Close Panel"
            >
              <svg
                aria-hidden="false"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Remove icon
                </title>
                <path
                  d="M1 0l7 7 7-7 1 1-7 7 7 7-1 1-7-7-7 7-1-1 7-7-7-7 1-1z"
                />
              </svg>
               
               
            </button>
          </div>
           
        </div>
         
        <div
          class="drawer-content"
        >
          <div
            class="panel-content use-a11y-text-styles"
          />
        </div>
      </div>
    </div>
     
    <div
      class="panel-wrapper use-a11y-text-styles"
      id="tao-panel-123"
    />
     
    <div
      class="feedback-dialogs-wrapper use-a11y-text-styles"
    >
      
    </div>
  </div>
</body>
`;

exports[`TestLayout > renders correctly with a serviceCallId 1`] = `
<body>
  <div>
    <div
      class="test-runner use-a11y-text-styles initial"
      style="--window-height: 767px; --floating-tools-height: 0px;"
    >
      <div />
       
      <div
        class="top-bar not-printable"
        id="test-top-bar"
      >
        <div>
          <div
            class="headerbar"
          >
            <header>
              <ol
                class="start"
              >
                <li>
                  <button
                    aria-controls="tao-panel-123"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Main menu"
                    class="icon-bar-btn actionable base-24 default"
                    data-test-id="mainmenu"
                    title="Main menu"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon large"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Menu icon
                      </title>
                      <path
                        d="M0 2h24v3H0zm0 8h24v3H0zm0 8h24v3H0z"
                      />
                    </svg>
                     
                     
                  </button>
                   
                </li>
              </ol>
               
              <div
                class="logo"
              >
                <img
                  alt="TAO Logo"
                  src="logo.svg"
                />
              </div>
               
              <div
                class="content"
              >
                <div
                  class="header-bar-content"
                />
              </div>
            </header>
             
            <aside>
              <ol
                class="end"
              >
                 
              </ol>
               
              <div
                slot="aside-after"
              />
            </aside>
          </div>
        </div>
         
        <div
          class="floating-toolbars-wrapper"
        >
          <div
            class="floating-toolbars"
          >
            
             
            <div
              class="flex-break"
            />
            
            
             
            <div
              class="flex-break"
            />
            
            
             
            
          </div>
        </div>
      </div>
       
      <div
        class="notification-container-wrapper not-printable"
      >
        <div
          aria-label="Notifications"
          class="notification-container"
          role="log"
        />
      </div>
       
      <main
        aria-labelledby="a11y-main"
        id="test-main"
        role="main"
        tabindex="0"
      >
        <div
          class="scroll-first-child"
        />
         
        <h2
          class="visually-hidden"
          id="a11y-main"
          tabindex="-1"
        />
         
        <div
          class="test-content-columns"
        >
          <aside
            class="not-displayed"
            id="test-content-aside-start"
            role="aside"
          />
           
          <div
            class="qti-item-container"
          />
           
          <aside
            class="not-displayed"
            id="test-content-aside-end"
            role="aside"
          />
        </div>
         
        <div
          class="scroll-last-child"
        />
      </main>
       
      <div
        class="transition-wrapper"
      />
       
      <nav
        aria-hidden="true"
        class="bottom-bar do-not-read not-printable"
        id="test-navigation"
      >
        <h2
          class="visually-hidden"
        >
          Test Navigation
        </h2>
      </nav>
       
      <nav
        class="item-modalfeedback-nav hidden"
        style="--nav-height: var(--testrunner-footer-height);"
      />
       
      <div
        class="item-hanger-wrapper not-printable"
      />
       
      <div
        aria-hidden="true"
        class="overlay"
      >
        <header
          role="none"
        >
          <div
            slot="header"
          />
        </header>
         
        <div
          aria-labelledby="a11y-overlay"
          class="overlay-content"
          role="main"
        >
          <div
            class="scroll-first-child"
          />
           
          <div
            slot="content"
          />
           
          <div
            class="scroll-last-child"
          />
        </div>
         
        <footer>
          <div
            slot="footer"
          />
        </footer>
      </div>
    </div>
     
    <div
      class="panel close-initial inverted-color"
      id="tao-panel-123"
    >
      <div
        class="drawer start inverted"
      >
        <div
          class="header"
        >
          <div
            class="icon-wrapper"
          >
            <button
              aria-label="Close Panel"
              class="icon-bar-btn actionable base-16 inverted"
              title="Close Panel"
            >
              <svg
                aria-hidden="false"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Remove icon
                </title>
                <path
                  d="M1 0l7 7 7-7 1 1-7 7 7 7-1 1-7-7-7 7-1-1 7-7-7-7 1-1z"
                />
              </svg>
               
               
            </button>
          </div>
           
        </div>
         
        <div
          class="drawer-content"
        >
          <div
            class="panel-content use-a11y-text-styles"
          />
        </div>
      </div>
    </div>
     
    <div
      class="panel-wrapper use-a11y-text-styles"
      id="tao-panel-123"
    />
     
    <div
      class="feedback-dialogs-wrapper use-a11y-text-styles"
    >
      
    </div>
  </div>
</body>
`;

exports[`TestLayout > updates based on itemSessionState 1`] = `
<body>
  <div>
    <div
      class="test-runner use-a11y-text-styles interacting"
      style="--window-height: 767px; --floating-tools-height: 0px;"
    >
      <div />
       
      <div
        class="top-bar not-printable"
        id="test-top-bar"
      >
        <div>
          <div
            class="headerbar"
          >
            <header>
              <ol
                class="start"
              >
                <li>
                  <button
                    aria-controls="tao-panel-123"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Main menu"
                    class="icon-bar-btn actionable base-24 default"
                    data-test-id="mainmenu"
                    title="Main menu"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon large"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Menu icon
                      </title>
                      <path
                        d="M0 2h24v3H0zm0 8h24v3H0zm0 8h24v3H0z"
                      />
                    </svg>
                     
                     
                  </button>
                   
                </li>
              </ol>
               
              <div
                class="logo"
              >
                <img
                  alt="TAO Logo"
                  src="logo.svg"
                />
              </div>
               
              <div
                class="content"
              >
                <div
                  class="header-bar-content"
                />
              </div>
            </header>
             
            <aside>
              <ol
                class="end"
              >
                 
              </ol>
               
              <div
                slot="aside-after"
              />
            </aside>
          </div>
        </div>
         
        <div
          class="floating-toolbars-wrapper"
        >
          <div
            class="floating-toolbars"
          >
            
             
            <div
              class="flex-break"
            />
            
            
             
            <div
              class="flex-break"
            />
            
            
             
            
          </div>
        </div>
      </div>
       
      <div
        class="notification-container-wrapper not-printable"
      >
        <div
          aria-label="Notifications"
          class="notification-container"
          role="log"
        />
      </div>
       
      <main
        aria-labelledby="a11y-main"
        id="test-main"
        role="main"
        tabindex="0"
      >
        <div
          class="scroll-first-child"
        />
         
        <h2
          class="visually-hidden"
          id="a11y-main"
          tabindex="-1"
        />
         
        <div
          class="test-content-columns"
        >
          <aside
            class="not-displayed"
            id="test-content-aside-start"
            role="aside"
          />
           
          <div
            class="qti-item-container"
          />
           
          <aside
            class="not-displayed"
            id="test-content-aside-end"
            role="aside"
          />
        </div>
         
        <div
          class="scroll-last-child"
        />
      </main>
       
      <div
        class="transition-wrapper"
      />
       
      <nav
        aria-hidden="true"
        class="bottom-bar do-not-read not-printable hidden"
        id="test-navigation"
      >
        <h2
          class="visually-hidden"
        >
          Test Navigation
        </h2>
      </nav>
       
      <nav
        class="item-modalfeedback-nav"
        style="--nav-height: var(--testrunner-footer-height);"
      />
       
      <div
        class="item-hanger-wrapper not-printable"
      />
       
      <div
        aria-hidden="true"
        class="overlay"
      >
        <header
          role="none"
        >
          <div
            slot="header"
          />
        </header>
         
        <div
          aria-labelledby="a11y-overlay"
          class="overlay-content"
          role="main"
        >
          <div
            class="scroll-first-child"
          />
           
          <div
            slot="content"
          />
           
          <div
            class="scroll-last-child"
          />
        </div>
         
        <footer>
          <div
            slot="footer"
          />
        </footer>
      </div>
    </div>
     
    <div
      class="panel close-initial inverted-color"
      id="tao-panel-123"
    >
      <div
        class="drawer start inverted"
      >
        <div
          class="header"
        >
          <div
            class="icon-wrapper"
          >
            <button
              aria-label="Close Panel"
              class="icon-bar-btn actionable base-16 inverted"
              title="Close Panel"
            >
              <svg
                aria-hidden="false"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Remove icon
                </title>
                <path
                  d="M1 0l7 7 7-7 1 1-7 7 7 7-1 1-7-7-7 7-1-1 7-7-7-7 1-1z"
                />
              </svg>
               
               
            </button>
          </div>
           
        </div>
         
        <div
          class="drawer-content"
        >
          <div
            class="panel-content use-a11y-text-styles"
          />
        </div>
      </div>
    </div>
     
    <div
      class="panel-wrapper use-a11y-text-styles"
      id="tao-panel-123"
    />
     
    <div
      class="feedback-dialogs-wrapper use-a11y-text-styles"
    >
      
    </div>
  </div>
</body>
`;

exports[`TestLayout > updates based on the test runner status 1`] = `
<body>
  <div>
    <div
      class="test-runner use-a11y-text-styles initial"
      style="--window-height: 767px; --floating-tools-height: 0px;"
    >
      <div />
       
      <div
        class="top-bar not-printable"
        id="test-top-bar"
      >
        <div>
          <div
            class="headerbar"
          >
            <header>
              <ol
                class="start"
              >
                <li>
                  <button
                    aria-controls="tao-panel-123"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Main menu"
                    class="icon-bar-btn actionable base-24 default"
                    data-test-id="mainmenu"
                    title="Main menu"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon large"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Menu icon
                      </title>
                      <path
                        d="M0 2h24v3H0zm0 8h24v3H0zm0 8h24v3H0z"
                      />
                    </svg>
                     
                     
                  </button>
                   
                </li>
              </ol>
               
              <div
                class="logo"
              >
                <img
                  alt="TAO Logo"
                  src="logo.svg"
                />
              </div>
               
              <div
                class="content"
              >
                <div
                  class="header-bar-content"
                />
              </div>
            </header>
             
            <aside>
              <ol
                class="end"
              >
                 
              </ol>
               
              <div
                slot="aside-after"
              />
            </aside>
          </div>
        </div>
         
        <div
          class="floating-toolbars-wrapper"
        >
          <div
            class="floating-toolbars"
          >
            
             
            <div
              class="flex-break"
            />
            
            
             
            <div
              class="flex-break"
            />
            
            
             
            
          </div>
        </div>
      </div>
       
      <div
        class="notification-container-wrapper not-printable"
      >
        <div
          aria-label="Notifications"
          class="notification-container"
          role="log"
        />
      </div>
       
      <main
        aria-labelledby="a11y-main"
        id="test-main"
        role="main"
        tabindex="0"
      >
        <div
          class="scroll-first-child"
        />
         
        <h2
          class="visually-hidden"
          id="a11y-main"
          tabindex="-1"
        />
         
        <div
          class="test-content-columns"
        >
          <aside
            class="not-displayed"
            id="test-content-aside-start"
            role="aside"
          />
           
          <div
            class="qti-item-container"
          />
           
          <aside
            class="not-displayed"
            id="test-content-aside-end"
            role="aside"
          />
        </div>
         
        <div
          class="scroll-last-child"
        />
      </main>
       
      <div
        class="transition-wrapper"
      />
       
      <nav
        aria-hidden="true"
        class="bottom-bar do-not-read not-printable"
        id="test-navigation"
      >
        <h2
          class="visually-hidden"
        >
          Test Navigation
        </h2>
      </nav>
       
      <nav
        class="item-modalfeedback-nav hidden"
        style="--nav-height: var(--testrunner-footer-height);"
      />
       
      <div
        class="item-hanger-wrapper not-printable"
      />
       
      <div
        aria-hidden="true"
        class="overlay"
      >
        <header
          role="none"
        >
          <div
            slot="header"
          />
        </header>
         
        <div
          aria-labelledby="a11y-overlay"
          class="overlay-content"
          role="main"
        >
          <div
            class="scroll-first-child"
          />
           
          <div
            slot="content"
          />
           
          <div
            class="scroll-last-child"
          />
        </div>
         
        <footer>
          <div
            slot="footer"
          />
        </footer>
      </div>
    </div>
     
    <div
      class="panel close-initial inverted-color"
      id="tao-panel-123"
    >
      <div
        class="drawer start inverted"
      >
        <div
          class="header"
        >
          <div
            class="icon-wrapper"
          >
            <button
              aria-label="Close Panel"
              class="icon-bar-btn actionable base-16 inverted"
              title="Close Panel"
            >
              <svg
                aria-hidden="false"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Remove icon
                </title>
                <path
                  d="M1 0l7 7 7-7 1 1-7 7 7 7-1 1-7-7-7 7-1-1 7-7-7-7 1-1z"
                />
              </svg>
               
               
            </button>
          </div>
           
        </div>
         
        <div
          class="drawer-content"
        >
          <div
            class="panel-content use-a11y-text-styles"
          />
        </div>
      </div>
    </div>
     
    <div
      class="panel-wrapper use-a11y-text-styles"
      id="tao-panel-123"
    />
     
    <div
      class="feedback-dialogs-wrapper use-a11y-text-styles"
    >
      
    </div>
  </div>
</body>
`;

exports[`TestLayout > updates based on the test runner status 2`] = `
<body>
  <div>
    <div
      class="test-runner use-a11y-text-styles loading"
      style="--window-height: 767px; --floating-tools-height: 0px;"
    >
      <div />
       
      <div
        class="top-bar not-printable"
        id="test-top-bar"
      >
        <div>
          <div
            class="headerbar"
          >
            <header>
              <ol
                class="start"
              >
                <li>
                  <button
                    aria-controls="tao-panel-123"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Main menu"
                    class="icon-bar-btn actionable base-24 default"
                    data-test-id="mainmenu"
                    title="Main menu"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon large"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Menu icon
                      </title>
                      <path
                        d="M0 2h24v3H0zm0 8h24v3H0zm0 8h24v3H0z"
                      />
                    </svg>
                     
                     
                  </button>
                   
                </li>
              </ol>
               
              <div
                class="logo"
              >
                <img
                  alt="TAO Logo"
                  src="logo.svg"
                />
              </div>
               
              <div
                class="content"
              >
                <div
                  class="header-bar-content"
                />
              </div>
            </header>
             
            <aside>
              <ol
                class="end"
              >
                 
              </ol>
               
              <div
                slot="aside-after"
              />
            </aside>
          </div>
        </div>
         
        <div
          class="floating-toolbars-wrapper"
        >
          <div
            class="floating-toolbars"
          >
            
             
            <div
              class="flex-break"
            />
            
            
             
            <div
              class="flex-break"
            />
            
            
             
            
          </div>
        </div>
      </div>
       
      <div
        class="notification-container-wrapper not-printable"
      >
        <div
          aria-label="Notifications"
          class="notification-container"
          role="log"
        />
      </div>
       
      <main
        aria-labelledby="a11y-main"
        class="collapsed"
        id="test-main"
        role="main"
        tabindex="0"
      >
        <div
          class="scroll-first-child"
        />
         
        <h2
          class="visually-hidden"
          id="a11y-main"
          tabindex="-1"
        />
         
        <div
          class="test-content-columns"
        >
          <aside
            class="not-displayed"
            id="test-content-aside-start"
            role="aside"
          />
           
          <div
            aria-hidden="true"
            class="qti-item-container hidden-item-container"
          />
           
          <aside
            class="not-displayed"
            id="test-content-aside-end"
            role="aside"
          />
        </div>
         
        <div
          class="scroll-last-child"
        />
      </main>
       
      <div
        class="transition-wrapper"
      >
        <div
          class="transition"
        >
          <div
            aria-live="assertive"
            class="loading-wrapper small"
            role="alert"
          >
            <div
              class="loading"
            />
             
            <div
              class="content"
            >
              <p
                class="text"
              >
                loading
              </p>
            </div>
          </div>
           
          <p
            style="animation: __svelte_2884083938_0 500ms linear 4500ms 1 both;"
          >
            Please wait a little longer while your content loads
          </p>
        </div>
      </div>
       
      <nav
        aria-hidden="true"
        class="bottom-bar do-not-read not-printable"
        id="test-navigation"
      >
        <h2
          class="visually-hidden"
        >
          Test Navigation
        </h2>
      </nav>
       
      <nav
        class="item-modalfeedback-nav hidden"
        style="--nav-height: var(--testrunner-footer-height);"
      />
       
      <div
        class="item-hanger-wrapper not-printable"
      />
       
      <div
        aria-hidden="true"
        class="overlay"
      >
        <header
          role="none"
        >
          <div
            slot="header"
          />
        </header>
         
        <div
          aria-labelledby="a11y-overlay"
          class="overlay-content"
          role="main"
        >
          <div
            class="scroll-first-child"
          />
           
          <div
            slot="content"
          />
           
          <div
            class="scroll-last-child"
          />
        </div>
         
        <footer>
          <div
            slot="footer"
          />
        </footer>
      </div>
    </div>
     
    <div
      class="panel close-initial inverted-color"
      id="tao-panel-123"
    >
      <div
        class="drawer start inverted"
      >
        <div
          class="header"
        >
          <div
            class="icon-wrapper"
          >
            <button
              aria-label="Close Panel"
              class="icon-bar-btn actionable base-16 inverted"
              title="Close Panel"
            >
              <svg
                aria-hidden="false"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Remove icon
                </title>
                <path
                  d="M1 0l7 7 7-7 1 1-7 7 7 7-1 1-7-7-7 7-1-1 7-7-7-7 1-1z"
                />
              </svg>
               
               
            </button>
          </div>
           
        </div>
         
        <div
          class="drawer-content"
        >
          <div
            class="panel-content use-a11y-text-styles"
          />
        </div>
      </div>
    </div>
     
    <div
      class="panel-wrapper use-a11y-text-styles"
      id="tao-panel-123"
    />
     
    <div
      class="feedback-dialogs-wrapper use-a11y-text-styles"
    >
      
    </div>
  </div>
</body>
`;

exports[`TestLayout > updates based on the test runner status 3`] = `
<body>
  <div>
    <div
      class="test-runner use-a11y-text-styles proctorwait"
      style="--window-height: 767px; --floating-tools-height: 0px;"
    >
      <div />
       
      <div
        class="top-bar not-printable hidden"
        id="test-top-bar"
      >
        <div>
          <div
            class="headerbar"
          >
            <header>
              <ol
                class="start"
              >
                <li>
                  <button
                    aria-controls="tao-panel-123"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Main menu"
                    class="icon-bar-btn actionable base-24 default"
                    data-test-id="mainmenu"
                    title="Main menu"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon large"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Menu icon
                      </title>
                      <path
                        d="M0 2h24v3H0zm0 8h24v3H0zm0 8h24v3H0z"
                      />
                    </svg>
                     
                     
                  </button>
                   
                </li>
              </ol>
               
              <div
                class="logo"
              >
                <img
                  alt="TAO Logo"
                  src="logo.svg"
                />
              </div>
               
              <div
                class="content"
              >
                <div
                  class="header-bar-content"
                />
              </div>
            </header>
             
            <aside>
              <ol
                class="end"
              >
                 
              </ol>
               
              <div
                slot="aside-after"
              />
            </aside>
          </div>
        </div>
         
        <div
          class="floating-toolbars-wrapper"
        >
          <div
            class="floating-toolbars"
          >
            
             
            <div
              class="flex-break"
            />
            
            
             
            <div
              class="flex-break"
            />
            
            
             
            
          </div>
        </div>
      </div>
       
      <div
        class="notification-container-wrapper not-printable"
      >
        <div
          aria-label="Notifications"
          class="notification-container"
          role="log"
        />
      </div>
       
      <main
        aria-labelledby="a11y-main"
        id="test-main"
        role="main"
        tabindex="0"
      >
        <div
          class="scroll-first-child"
        />
         
        <h2
          class="visually-hidden"
          id="a11y-main"
          tabindex="-1"
        />
         
        <div
          class="test-content-columns"
        >
          <aside
            class="not-displayed"
            id="test-content-aside-start"
            role="aside"
          />
           
          <div
            class="qti-item-container hidden-item-container"
          />
           
          <aside
            class="not-displayed"
            id="test-content-aside-end"
            role="aside"
          />
        </div>
         
        <div
          class="scroll-last-child"
        />
      </main>
       
      <div
        class="transition-wrapper"
      />
       
      <nav
        aria-hidden="true"
        class="bottom-bar do-not-read not-printable hidden"
        id="test-navigation"
      >
        <h2
          class="visually-hidden"
        >
          Test Navigation
        </h2>
      </nav>
       
      <nav
        class="item-modalfeedback-nav hidden"
        style="--nav-height: var(--testrunner-footer-height);"
      />
       
      <div
        class="item-hanger-wrapper not-printable"
      />
       
      <div
        aria-hidden="true"
        class="overlay"
      >
        <header
          role="none"
        >
          <div
            slot="header"
          />
        </header>
         
        <div
          aria-labelledby="a11y-overlay"
          class="overlay-content"
          role="main"
        >
          <div
            class="scroll-first-child"
          />
           
          <div
            slot="content"
          />
           
          <div
            class="scroll-last-child"
          />
        </div>
         
        <footer>
          <div
            slot="footer"
          />
        </footer>
      </div>
    </div>
     
    <div
      class="panel close-initial inverted-color"
      id="tao-panel-123"
    >
      <div
        class="drawer start inverted"
      >
        <div
          class="header"
        >
          <div
            class="icon-wrapper"
          >
            <button
              aria-label="Close Panel"
              class="icon-bar-btn actionable base-16 inverted"
              title="Close Panel"
            >
              <svg
                aria-hidden="false"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Remove icon
                </title>
                <path
                  d="M1 0l7 7 7-7 1 1-7 7 7 7-1 1-7-7-7 7-1-1 7-7-7-7 1-1z"
                />
              </svg>
               
               
            </button>
          </div>
           
        </div>
         
        <div
          class="drawer-content"
        >
          <div
            class="panel-content use-a11y-text-styles"
          />
        </div>
      </div>
    </div>
     
    <div
      class="panel-wrapper use-a11y-text-styles"
      id="tao-panel-123"
    />
     
    <div
      class="feedback-dialogs-wrapper use-a11y-text-styles"
    >
      
    </div>
  </div>
</body>
`;
